--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,10 @@
 </head>
 <body>
 
-<div>
-  <div>
-    <a href="/">Home</a>
+<div style="background-color: aliceblue;height:100%">
+  <div id="header" style="background:#0593D3;height:50px;padding:0px 30px">
+    <a href="/" style="color: rgb(255, 255, 255); text-decoration: none; font-size: 40px; margin: 5px; float: left; clear: both;">HiPoplar</a>
+    <a href="/" style="color: rgb(255, 255, 255); font-size: 20px; clear: both; float: left; position: absolute; margin: 20px 10px 5px 5px;">Home</a>
   </div>
   
   {{ content }}
