--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -17,7 +17,7 @@
                   </li>
                   <li>
                     <a href="/categories.html#android">
-                      Android开发
+                      iOS开发
                     </a>
                   </li>
                 </ul>
