--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
             <span class="icon-bar">
             </span>
           </button>
-          <a class="navbar-brand" href="/index.html">
+          <a class="navbar-brand" href="/blog.html">
             {{ site.title }}
           </a>
         </div>
