--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <!-- Title -->
 <h2>
   {{ page.title }}
-  <div class="post-date"><a href="https://github.com/{{ site.github }}/{{ site.github }}.github.com/edit/master/{{ page.path }}" target="_blank">纠错</a>&nbsp;&nbsp;
+  <div class="post-date">
 	<span class="glyphicon glyphicon-time"></span>
 	{{ page.date | date_to_string }}
   </div>
@@ -33,7 +33,3 @@ layout: default
   {%endif%}
 </div>
 <hr>
-<!-- Blog Comments -->
-<div class="media">
-  {% include comment.html %} 
-</div>
