--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -2,17 +2,17 @@
                   <ul class="list-unstyled">
                       <li>
                           <a href="/categories.html#reading">
-                              阅读摘要
+                              图形设计
                           </a>
                       </li>
                       <li>
                           <a href="/categories.html#linux">
-                              Linux
+                              系统架构
                           </a>
                       </li>
                       <li>
                           <a href="/categories.html#java">
-                              Java开发
+                              设计模式
                           </a>
                       </li>
                   </ul>
@@ -22,17 +22,17 @@
                   <ul class="list-unstyled">
                       <li>
                           <a href="/categories.html#android">
-                              iOS开发
+                              性能优化
                           </a>
                       </li>
                       <li>
                           <a href="/categories.html#web">
-                              Web开发
+                              编码技巧
                           </a>
                       </li>
                       <li>
                           <a href="/categories.html#network">
-                              网络相关
+                              杂文随笔
                           </a>
                       </li>
                   </ul>
