--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="/css/blog.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/animationblog.css" rel="stylesheet">
+    
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
     queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file://
@@ -62,19 +65,10 @@
     <div class="container">
       <div class="row">
         <!-- Blog Entries Column -->
-        <div class="col-md-8">
+        <div class="row">
           {{ content }}
         </div>
         <!-- Blog Sidebar Widgets Column -->
-        <div class="col-md-4">
-          <!-- Blog Links Well -->
-          <div class="well">
-            <h4>
-              相关链接
-            </h4>
-            {% include links.html %} 
-          </div>
-        </div>
       </div>
       <!-- /.row -->
       <hr>
