--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
       <!-- Footer -->
       <footer>
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-xs-12 col-md-8">
             {% include copyright.html %} 
           </div>
           <!-- /.col-lg-12 -->
