--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row">
         <!-- Blog Entries Column -->
-        <div class="row">
+        <div class="col-xs-12 col-md-8">
           {{ content }}
         </div>
         <!-- Blog Sidebar Widgets Column -->
