--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,4 +1,4 @@
             <p align="center">
-				Copyright &copy; {{ site.domain }}, hosted on <a href="https://github.com">GitHub</a>, powered by Jekyll
+				Copyright &copy; {{ site.domain }}, hosted on <a href="https://github.com">GitHub</a>
 				<br/>
             </p>
