--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,22 +1,6 @@
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="/categories.html">
-                分 类
-              </a>
-            </li>
-            <li>
-              <a href="/tags.html">
-                标 签
-              </a>
-            </li>
-            <li>
-              <a href="/archives.html">
-                归 档
-              </a>
-            </li>
-            <li>
-              <a href="/about.html">
-                关 于
-              </a>
-            </li>
-          </ul>
+  <ul class="nav navbar-nav">
+    <li><a href="/categories.html">分 类</a></li>
+    <li><a href="/tags.html">标 签</a></li>
+    <li><a href="/archives.html">归 档</a></li>
+    <!--<li><a href="/about.html">关 于</a></li>-->
+  </ul>
