--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <link href="/css/blog.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/animationblog.css" rel="stylesheet">
+    <link rel="icon" href="/image/hipopulus.ico" type="image/x-icon">
     <!-- jQuery Version 1.11.0 -->
     <script src="/js/jquery-1.11.0.js"> </script>
     <!-- Bootstrap Core JavaScript -->
